--- a/index.html
+++ b/index.html
@@ -239,13 +239,15 @@
         <form id="contact-form" class="contact-form" onsubmit="sendMail(event)">
           <div class="form">
             <input type="text" id="name" name="name" placeholder="Name" required />
+            </div>
+            <div class="form">
             <input type="email" id="email" name="email" placeholder="Email" required />
           </div>
-          <div class="form">
+          <!-- <div class="form">
             <input type="text" id="subject" name="subject" placeholder="Subject" />
-          </div>
+          </div> -->
           <div class="form">
-            <textarea name="message" id="message" rows="5" placeholder="Message" required></textarea>
+            <textarea name="message" id="message" rows="8" placeholder="Message" required></textarea>
           </div>
           <div class="form">
             <!--  -->
@@ -301,6 +303,7 @@
 </body>
 
 </html>
+
 
 
 
