--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="projects-section">
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2024-11-07 162441.png" alt="ProShop">
+            <img src="IMG/Screenshot 2024-11-07 162441.png" alt="E-commerce Burger Restaurant" loading="lazy">
           </div>
           <div class="project-title">
             <div>
@@ -216,7 +216,7 @@
         </div>
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2026-02-03 061227.png" alt="Library">
+            <img src="IMG/Screenshot 2026-02-03 061227.png" alt="Portfolio" loading="lazy">
           </div>
           <div class="project-title">
             <div>
@@ -305,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
