--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preload" as="image" href="path-to-hero.webp">
-  <link rel="preload" as="style" href="styles.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -20,6 +18,9 @@
         publicKey: "vrgUEapjJFZwDATsM",
       });
     })();
+    window.addEventListener("load", () => {
+  initCanvas();
+});
   </script>
 </head>
 
@@ -305,6 +306,7 @@
 </body>
 
 </html>
+
 
 
 
