--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             to
             technology-driven projects while continuing to learn and grow.</p>
           <figure>
-            <img src="IMG/WhatsApp Image 2026-02-02 at 6.18.28 PM.jpeg" alt="hand catch phone" loading="lazy">
+            <img src="IMG/WhatsApp Image 2026-02-02 at 6.18.28 PM.WebP" alt="hand catch phone" loading="lazy">
           </figure>
         </div>
       </div>
@@ -201,7 +201,7 @@
       <div class="projects-section">
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2024-11-07 162441.png" alt="E-commerce Burger Restaurant" loading="lazy">
+            <img src="IMG/Screenshot 2024-11-07 162441.WebP" alt="E-commerce Burger Restaurant" loading="lazy">
           </div>
           <div class="project-title">
             <div>
@@ -217,7 +217,7 @@
         </div>
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2026-02-03 061227.png" alt="Portfolio" loading="lazy">
+            <img src="IMG/Screenshot 2026-02-03 061227.WebP" alt="Portfolio" loading="lazy">
           </div>
           <div class="project-title">
             <div>
@@ -306,6 +306,7 @@
 </body>
 
 </html>
+
 
 
 
