--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             to
             technology-driven projects while continuing to learn and grow.</p>
           <figure>
-            <img src="IMG/WhatsApp Image 2026-02-02 at 6.18.28 PM.WebP" alt="hand catch phone" loading="lazy">
+            <img src="IMG/WhatsApp Image 2026-02-02 at 6.18.28 PM.WebP" alt="Mahmoud Abubakr smiling photo" loading="lazy">
           </figure>
         </div>
       </div>
@@ -326,6 +326,7 @@
 </body>
 
 </html>
+
 
 
 
