--- a/index.html
+++ b/index.html
@@ -256,16 +256,22 @@
           just want to say hi, I’ll definitely get back to you!</p>
         <form id="contact-form" class="contact-form" onsubmit="sendMail(event)">
           <div class="form">
-            <input type="text" id="name" name="name" placeholder="Name" autocomplete="given-name" required />
+                        <label for="name"></label>
+            <input type="text" id="name" name="name" placeholder="Name" autocomplete="given-name" aria-required="true" aria-describedby="name-error" required />
+                            <div id="name-error" role="alert" style="color: red; display: none;"></div>
             </div>
             <div class="form">
-            <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" required />
+                          <label for="email"></label>
+            <input type="email" id="email" name="email" placeholder="Email" autocomplete="off" aria-required="true" aria-describedby="email-error" required />
+                              <div id="email-error" role="alert" style="color: red; display: none;"></div>
           </div>
           <!-- <div class="form">
             <input type="text" id="subject" name="subject" placeholder="Subject" />
           </div> -->
           <div class="form">
-            <textarea name="message" id="message" rows="8" placeholder="Message" required></textarea>
+                            <label for="message"></label>
+            <textarea name="message" id="message" rows="8" placeholder="Message" aria-required="true" aria-describedby="message-error" required></textarea>
+                            <div id="message-error" role="alert" style="color: red; display: none;"></div>
           </div>
           <div class="form">
             <!--  -->
@@ -326,6 +332,7 @@
 </body>
 
 </html>
+
 
 
 
