--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="lines-container">
           <div class="line line-1"></div>
           <div class="line line-2"></div>
+          <div class="line line-3"></div>
         </div>
       </div>
     </div>
@@ -307,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
