--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="index, follow">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Mahmoud Abubakr | Front-End Developer Portfolio">
+  <meta property="og:title" content="Mahmoud Abubakr Portfolio">
   <meta property="og:description" content="Front-End Developer specializing in modern, responsive, and high-performance web experiences.">
   <meta property="og:image" content="https://mahmoudabubakr.github.io/My-portfolio/preview.png">
   <meta property="og:url" content="https://mahmoudabubakr.github.io/My-portfolio/">
@@ -308,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
