--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Mahmoud Abubakr | Front-End Developer Portfolio">
+  <meta name="twitter:title" content="Mahmoud Abubakr Portfolio">
   <meta name="twitter:description" content="Front-End Developer specializing in modern, responsive, and high-performance web experiences.">
   <meta name="twitter:image" content="https://mahmoudabubakr.github.io/My-portfolio/preview.png">
 
   <!-- Title -->
-  <title>Mahmoud Abubakr | Front-End Developer Portfolio</title>
+  <title>Mahmoud Abubakr Portfolio</title>
 
   <!-- Favicon و Apple Icon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -308,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
