--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <div class="projects-section">
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2024-11-07 162441.WebP" alt="E-commerce Burger Restaurant website project" loading="lazy">
+            <img src="IMG/Screenshot 2024-11-07 162441.WebP" alt="E-commerce Burger Restaurant website project">
           </div>
           <div class="project-title">
             <div>
@@ -219,7 +219,7 @@
         </div>
         <div class="project-card">
           <div class="image-container">
-            <img src="IMG/Screenshot 2026-02-03 061227.WebP" alt="Portfolio website project" loading="lazy">
+            <img src="IMG/Screenshot 2026-02-03 061227.WebP" alt="Portfolio website project">
           </div>
           <div class="project-title">
             <div>
@@ -308,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
