--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </svg>
           </div>
           <h3>UI&UX Desing</h3>
-          <p>ning intuitive and engaging interfaces for an enhanced user experience.</p>
+          <p>thing intuitive and engaging interfaces for an enhanced user experience.</p>
         </div>
         <div class="card">
           <div class="service-img">
@@ -178,7 +178,7 @@
                 fill="currentColor"></path>
             </svg>
           </div>
-          <h3>Frontend By React</h3>
+          <h3>Frontend By React JS</h3>
           <p>Utilizing frameworks like React.js for scalable web applications.</p>
         </div>
         <div class="card">
@@ -308,6 +308,7 @@
 </body>
 
 </html>
+
 
 
 
